# meshtastic-config-reader

./: Cargo.toml  index.html  meshtastic-config-reader-77c23e54f863092b.js  meshtastic-config-reader-77c23e54f863092b_bg.wasm
.github/workflows/: rust.yml
assets/: sw.js
src/: app.rs  main.rs
